k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devsecops-app
  namespace: devsecops-ns  # FIx CKV_K8S_21 - évite le namespace default
  labels:
    app: devsecops-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devsecops-app
  template:
    metadata:
      labels:
        app: devsecops-app
      annotations:
        # Annotations pour l'injection automatique des secrets HashiCorp Vault
        vault.hashicorp.com/agent-inject: "true"
        vault.hashicorp.com/role: "app-role"
        vault.hashicorp.com/agent-inject-secret-database-config.txt: "secret/data/db-cred"
    spec:
      automountServiceAccountToken: false # Fix CKV_K8S_38 - désactive le token K8s inutile
      # Sécurité au niveau du Pod
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        fsGroup: 10001
      containers:
      - name: app
        # Fix CKV_K8S_43: Utilise un digest sha256 ou un tag immuable précis
        image: python:3.11-slim@sha256:4b0945939257e8055a40b3fa8f5d0f19c9914619d854495521b473f88d754127
        #FIx CKV_K8S_15 - Force le téléchargement de l'image
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        # Sécurité au niveau du Conteneur
        securityContext:
          allowPrivilegeEscalation: false # Interdit l'élévation de privilèges (ex: sudo)
          readOnlyRootFilesystem: true    # Rendre le système de fichiers immuable
          capabilities:
            drop:
            - ALL                         # Supprime toutes les capacités Linux (CAP_SYS_ADMIN, etc.)
        resources:
          limits:
            cpu: "200m"
            memory: "256Mi"
          requests:
            cpu: "100m"
            memory: "128Mi"
        # Fix CKV_K8S_8: ajout de la Liveness Probe
        livenessProbe:
          httpGet:
            path: /healthz
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /healthz
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10
